syntax = "proto3";
package gateway.middleware.circuitbreaker.v1;
option go_package = "github.com/go-kratos/gateway/api/gateway/middleware/circuitbreaker/v1";
import "google/protobuf/duration.proto";
import "gateway/config/v1/gateway.proto";

// CircuitBreaker middleware config.
message CircuitBreaker {
    oneof trigger {
        SuccessRatio success_ratio = 1;
        int64 ratio = 2;
    }
    oneof action {
        ResponseData response_data = 3;
        BackupService backup_service = 4;
    }
    repeated gateway.config.v1.Condition assert_condtions = 5;
}

message Header {
    string key = 1;
    repeated string value = 2;
}

message ResponseData {
    int32 status_code = 1;
    repeated Header header = 2;
    bytes body = 3;
}

message BackupService {
    gateway.config.v1.Endpoint endpoint = 1;
}

message SuccessRatio {
    double success = 1;
    int32 request = 2;
    int32 bucket = 3;
    google.protobuf.Duration window = 4;
}
