syntax = "proto3";

package gateway.middleware.otel.v1;

option go_package = "github.com/go-kratos/gateway/api/gateway/middleware/otel/v1";

import "google/protobuf/duration.proto";

// tracing middleware config
message otel {
	// report endpoint url
	string http_endpoint = 1;
	// sample ratio
	optional float sample_ratio = 2;
	// service name to report
	optional string service_name = 3;
	// report timeout
	google.protobuf.Duration timeout = 4;
}